# ada

./: Cargo.toml  README.md  run.sh  test_config.sh  todo.txt
.github/workflows/: release.yml
src/: config.rs  main.rs  scanner.rs  ui.rs
src/tools/: edit.rs  execute.rs  file_ops.rs  formatter.rs  git.rs  glob.rs  grep.rs  list_directory.rs  mod.rs  read_file.rs  search_directory.rs  tree.rs  webfetch.rs  write_files.rs
