[package]
name = "ada"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
git2 = "0.19"
ignore = "0.4"
notify = "6"
tree-sitter = "0.22"
async-trait = "0.1"
rig = { git = "https://github.com/0xPlaygrounds/rig", package = "rig-core" }
regex = "1"
globset = "0.4"
similar = "2"
